WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271182
REGRESSION(
276198@main
): Broke internal Safari
https://bugs.webkit.org/show_bug.cgi?id=271182
Summary
REGRESSION(276198@main): Broke internal Safari
WebKit Commit Bot
Reported
2024-03-18 14:50:55 PDT
https://commits.webkit.org/276198@main
introduced a regression: Broke internal Safari This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 276198@main
(32.57 KB, patch)
2024-03-18 14:51 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2024-03-18 14:51:03 PDT
Created
attachment 470420
[details]
REVERT of
276198@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2
2024-03-18 14:56:54 PDT
Committed
276302@main
(6c9fb3193d9d): <
https://commits.webkit.org/276302@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470420
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-03-18 14:57:43 PDT
<
rdar://problem/124970644
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug