Cherry-pick 6c9fb3193d9d. rdar://124970644

Unreviewed, reverting 276198@main and 276218@main.
    https://bugs.webkit.org/show_bug.cgi?id=271182

    Broke internal Safari

    Reverted changesets:

    "new exception handler adoption"
    https://bugs.webkit.org/show_bug.cgi?id=269728
    https://commits.webkit.org/276198@main

    "fix darwin_arm_thread_state64 macro usage build issue"
    https://bugs.webkit.org/show_bug.cgi?id=271097
    https://commits.webkit.org/276218@main

    Canonical link: https://commits.webkit.org/276302@main

Identifier: 274976.1273@safari-7619.1.6-branch