Source/JavaScriptCore/runtime/VMTraps.cpp
@@ -201,7 +201,6 @@ public:
         , m_vm(vm)
     {
         activateSignalHandlersFor(Signal::AccessFault);
-        finalizeSignalHandlers();
     }
 
     static void initializeSignals()
