Tools/TestWebKitAPI/Tests/WTF/Signals.cpp
@@ -47,9 +47,7 @@ public:
 TEST(Signals, SignalsWorkOnExit)
 {
     static bool handlerRan = false;
-    uint32_t key = 0;
-    int mask = 0;
-    initializeSignalHandling(key, mask);
+    initializeSignalHandling();
     addSignalHandler(Signal::Usr, [] (Signal signal, SigInfo&, PlatformRegisters&) -> SignalAction {
         RELEASE_ASSERT(signal == Signal::Usr);
 
@@ -58,7 +56,6 @@ TEST(Signals, SignalsWorkOnExit)
         return SignalAction::Handled;
     });
     activateSignalHandlersFor(Signal::Usr);
-    finalizeSignalHandlers();
 
     Atomic<bool> receiverShouldKeepRunning(true);
     Ref<Thread> receiverThread = (Thread::create("ThreadMessage receiver",
@@ -82,12 +79,7 @@ TEST(Signals, SignalsWorkOnExit)
 TEST(Signals, SignalsAccessFault)
 {
     static bool handlerRan = false;
-    uint32_t key = 0;
-    int mask = 0;
-#if HAVE(MACH_EXCEPTIONS)
-    mask |= toMachMask(Signal::AccessFault);
-#endif // HAVE(MACH_EXCEPTIONS)
-    initializeSignalHandling(key, mask);
+    initializeSignalHandling();
     addSignalHandler(Signal::AccessFault, [] (Signal signal, SigInfo& sigInfo, PlatformRegisters& context) -> SignalAction {
         RELEASE_ASSERT(signal == Signal::AccessFault);
 
@@ -105,7 +97,6 @@ TEST(Signals, SignalsAccessFault)
         return SignalAction::Handled;
     });
     activateSignalHandlersFor(Signal::AccessFault);
-    finalizeSignalHandlers();
 
     // Allocate a page of memory
     char* ptr = bitwise_cast<char*>(Gigacage::tryAllocateZeroedVirtualPages(Gigacage::Primitive, 4096));
